controls/terraform-best-practices/ec2/api/check-vpc-default-security-group-closed/test/bad-test/bad-payload-01.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0b0ad5348432fe2ca",
                            "UserId": "xxxx"
                        }
                    ]
                }
            ],
            "OwnerId": "xxxx",
            "GroupId": "sg-0b0ad5348432fe2ca",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-0a0e88c4f0aa13753"
        }
    ]
}
